--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
                 <div class="left__side">
                     <ul>
-                    <li><a href="" class="li-1"><img src="star.svg" alt="star" class="star">support</a></li>
+                    <li class="li-2"><a href="" class="li-1 "><img src="star.svg" alt="star" class="star">support</a></li>
                     <li><a href="" class="end">connect<br>with us</a></li>
                     </ul>
                     <hr class="hr-1">
